Major site update

--- a/global.css
+++ b/global.css
@@ -33,3 +33,12 @@ button:hover {
     background-color: #f5eefd;
     cursor: pointer;
 }
+
+.overlay {
+    position: absolute;
+    opacity: 95%;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
