--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,13 @@ html {
   height: 100%;
 }
 
+
+@media screen and (max-width:600px) {
+  #root {
+    flex-direction: column;
+  }
+}
+
 a {
   text-decoration: none;
   color: #FFFFFF
@@ -50,4 +57,8 @@ button:hover {
   right: 0;
   left: 0;
   bottom: 0;
+}
+  
+h1 {
+  font-weight: normal;
 }
