--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ a.sidebar-item {
 }
 
 a:hover.sidebar-item {
-  background-color: #330066;
+  background-color: var(--primaryColor);
   border-radius: 0.5rem;
 }
 
@@ -96,6 +96,39 @@ input[type=checkbox] {
   flex-grow: 1;
 }
 
+.blog-container {
+  margin:1rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  background-color: var(--primaryColor);
+  border-radius: 1rem;
+}
+
+
+.blog-container img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.blog-container table {
+  /* not ideal since we want to be flexible and not always divided equally */
+  table-layout: fixed;
+  width: 100%;
+}
+
+.blog-container hr {
+  width: 100%;
+  color: inherit;
+}
+
+.blog-container blockquote {
+  border-color: white;
+  border-left-width: 0.5rem;
+  border-left-style: solid;
+  padding-left: 1rem;
+  background-color: var(--secondaryColor);
+}
+
 @media screen and (max-width: 600px) {
   #contacts {
     order: 1;
@@ -114,7 +147,7 @@ input[type=checkbox] {
     justify-content: space-between;
     flex-wrap: wrap;
     flex-direction: row;
-    background-color: #380a69;
+    background-color: var(--primaryColor);
     border-radius: 0.5rem;
   }
 
@@ -133,7 +166,13 @@ input[type=checkbox] {
   }
 
   .menu a {
-    background-color: #380a69;
+    background-color: var(--primaryColor);
+  }
+  
+  .blog-container {
+    margin: 0;
+    padding: 1rem;
+    background-color: unset;
   }
 }
 
