--- a/src/components/project-box.css
+++ b/src/components/project-box.css
@@ -59,6 +59,7 @@
     text-align: center;
     justify-content: center;
     align-items: flex-end;
+    align-content: flex-end;
 }
 
 .technologies span.name {
