--- a/src/App.css
+++ b/src/App.css
@@ -236,3 +236,9 @@ input[type=checkbox] {
     padding: 7rem;
   }
 }
+
+@media only screen and (min-width: 1600px) {
+  .projects-section {
+    column-count: 4;
+  }
+}
