--- a/src/components/project-box.css
+++ b/src/components/project-box.css
@@ -4,8 +4,18 @@
     margin-bottom: 1rem;
 }
 
+.overlay {
+  position: absolute;
+  transition: opacity .2s ease-in-out;
+  opacity: 0%;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
 .project-box:hover .overlay {
-    visibility: visible;
+    opacity: 97%;
 }
 
 .project-box .main {
@@ -27,7 +37,6 @@
 }
 
 .project-box .overlay {
-    visibility: hidden;
     display: grid;
     grid-template-rows: 0.5fr max-content 0.5fr;
     background: var(--primaryColor);
@@ -40,7 +49,7 @@
     flex-direction: column;
 
     /* disable double tap on mobile device */
-    transition:visibility 0.2s linear,opacity 0.2s linear;
+    /* transition:visibility 0.2s linear,opacity 0.2s linear; */
 
 }
 
