--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ html {
   --primaryColor:#29044e;
   --secondaryColor:#130027;
   height: 100%;
-  background: var(--secondaryColor);
+  /* background: var(--secondaryColor); */
   color: #FFFFFF;
   font-family: 'Noto Sans Mono', monospace;
 }
